Add basic views and components for Character Sheet page

--- a/app/views/create_attributes.scala.html
+++ b/app/views/create_attributes.scala.html
@@ -1,8 +1,8 @@
 
-@import forms.Attributes
-@import forms.Attributes._
+@import forms.InitialAttributes
+@import forms.InitialAttributes._
 
-@(form: Form[Attributes])
+@(form: Form[InitialAttributes])
 
 @components.page_with_bootstrap() {
 
