--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -11,7 +11,12 @@
       <h2>Here you can create your character</h2>
     </div>
     <div class="row">
-      <a class="btn btn-primary" href="/attributes/create" role="button">Enter Initial Characteristics</a>
+      <div class="col">
+        <a role="button" class="btn btn-primary" href=@{routes.CreateCharacterController.displayPage()}>Enter Initial Characteristics</a>
+      </div>
+      <div class="col">
+        <a role="button" class="btn btn-primary" href=@{routes.CharacterSheetController.displayPage()}>View character sheet</a>
+      </div>
     </div>
   </div>
 
