--- a/app/views/components/characteristics_table.scala.html
+++ b/app/views/components/characteristics_table.scala.html
@@ -1,61 +1,38 @@
 
-@()
+@import models.charactersheet.characteristics.Characteristic
+
+@import scala.collection.mutable.{Seq => MSeq}
+
+@(characteristics: MSeq[Characteristic])
 
 <table class="table table-dark">
   <thead>
     <tr>
       <th scope="col"></th>
-      <th scope="col">WS</th>
-      <th scope="col">BS</th>
-      <th scope="col">S</th>
-      <th scope="col">T</th>
-      <th scope="col">I</th>
-      <th scope="col">Ag</th>
-      <th scope="col">Dex</th>
-      <th scope="col">Int</th>
-      <th scope="col">WP</th>
-      <th scope="col">Fel</th>
+      @for(ch <- characteristics) {
+        <th scope="col">@{ch.identifier.shortName}</th>
+      }
     </tr>
   </thead>
+
   <tbody>
     <tr>
       <th scope="row">Initial</th>
-      <td>31</td>
-      <td>31</td>
-      <td>31</td>
-      <td>31</td>
-      <td>31</td>
-      <td>31</td>
-      <td>31</td>
-      <td>31</td>
-      <td>31</td>
-      <td>31</td>
+      @for(ch <- characteristics) {
+        <th scope="col">@{ch.initial}</th>
+      }
     </tr>
     <tr>
       <th scope="row">Advances</th>
-      <td>7</td>
-      <td>7</td>
-      <td>7</td>
-      <td>7</td>
-      <td>7</td>
-      <td>7</td>
-      <td>7</td>
-      <td>7</td>
-      <td>7</td>
-      <td>7</td>
+      @for(ch <- characteristics) {
+        <th scope="col">@{ch.advances}</th>
+      }
     </tr>
     <tr>
       <th scope="row">Actual</th>
-      <td><strong>38</strong></td>
-      <td><strong>38</strong></td>
-      <td><strong>38</strong></td>
-      <td><strong>38</strong></td>
-      <td><strong>38</strong></td>
-      <td><strong>38</strong></td>
-      <td><strong>38</strong></td>
-      <td><strong>38</strong></td>
-      <td><strong>38</strong></td>
-      <td><strong>38</strong></td>
+      @for(ch <- characteristics) {
+        <th scope="col">@{ch.current}</th>
+      }
     </tr>
   </tbody>
 </table>
