--- a/app/views/character_sheet.scala.html
+++ b/app/views/character_sheet.scala.html
@@ -1,31 +1,35 @@
 
-@import models.charactersheet.CharacterStats
+@@import models.charactersheet.CharacterStats
+@import models.charactersheet.skills.{Advanced, Basic}
 
 @(characterStats: CharacterStats)
 
 @components.page_with_bootstrap() {
 
-  <div class="container">
+  <div class="container-fluid">
+
     <div class="row">
       <div class="col">
         <h3 align="center">Characteristics</h3>
         @{components.characteristics_table(characterStats.characteristics)}
       </div>
     </div>
+
     <div class="row">
       <div class="col">
         <h3 align="center">Basic Skills</h3>
-        @{components.skills_table(characterStats.skills.take(characterStats.skills.length / 2))}
+        @{components.skills_table(characterStats.skills.filter(_.definition.category.contains(Basic)).take(characterStats.skills.length / 2))}
       </div>
       <div class="col">
         <h3 align="center">Basic Skills</h3>
-        @{components.skills_table(characterStats.skills.drop(characterStats.skills.length / 2))}
+        @{components.skills_table(characterStats.skills.filter(_.definition.category.contains(Basic)).drop(characterStats.skills.length / 2))}
       </div>
       <div class="col">
         <h3 align="center">Advanced Skills</h3>
-        @{components.basic_skills_table(characterStats.skills)}
+        @{components.skills_table(characterStats.skills.filter(_.definition.category.contains(Advanced)).drop(characterStats.skills.length))}
       </div>
     </div>
+
     <div class="row">
       <div class="col">
         <h3 align="center">Talents</h3>
