--- a/app/views/character_sheet.scala.html
+++ b/app/views/character_sheet.scala.html
@@ -10,29 +10,29 @@
 
     <div class="row">
       <div class="col">
-        <h3 align="center">Characteristics</h3>
+        <h3>Characteristics</h3>
         @{components.characteristics_table(characterStats.characteristics)}
       </div>
     </div>
 
     <div class="row">
       <div class="col">
-        <h3 align="center">Basic Skills</h3>
+        <h3>Basic Skills</h3>
         @{components.skills_table(characterStats.skills.filter(_.definition.category.contains(Basic)).take(characterStats.skills.length / 2))}
       </div>
       <div class="col">
-        <h3 align="center">Basic Skills</h3>
+        <h3>Basic Skills</h3>
         @{components.skills_table(characterStats.skills.filter(_.definition.category.contains(Basic)).drop(characterStats.skills.length / 2))}
       </div>
       <div class="col">
-        <h3 align="center">Advanced Skills</h3>
+        <h3>Advanced Skills</h3>
         @{components.skills_table(characterStats.skills.filter(_.definition.category.contains(Advanced)).drop(characterStats.skills.length))}
       </div>
     </div>
 
     <div class="row">
       <div class="col">
-        <h3 align="center">Talents</h3>
+        <h3>Talents</h3>
         @{components.talents_table(characterStats.talents)}
       </div>
     </div>
